--- a/index.html
+++ b/index.html
@@ -14,119 +14,130 @@
 
 <body>
     <header class="header__inicio">
-            <nav class="navegacion">
-                <a class="logo" href="index.html">
-                    <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
-                </a>
+        <nav class="navegacion">
+            <a class="logo" href="index.html">
+                <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
+            </a>
+            <div class="navegacion__enlaces">
                 <a class="navegacion__enlace" href="index.html">Inicio</a>
                 <a class="navegacion__enlace" href="proyectos.html">Proyectos</a>
                 <a class="navegacion__enlace" href="contacto.html">Contacto</a>
                 <a class="navegacion__enlace" href="blog.html">Blog</a>
-            </nav>
-    </header>
-    <div class="header__texto">
-        <h2>Bienvenido a Alex Constrution</h2>
-        <p>Lorem ipsum dolor sit amet</p>
-    </div>
-    <main>
-        <div class="contenedor__centrado servicios">
-            <h2 class="servicios__titulo">Mis Servicios</h2>
-            <section >
-                <h3>Servicio 1</h3>
-                <div>
-                    <!--Imagen de Icono-->
-                </div>
-                <p>
-                    Pellentesque hendrerit urna eget leo
-                    tempus efficitur. Maecenas fringilla est eget
-                    mi ultricies, quis laoreet leo eleifend. Cras
-                    accumsan feugiat sapien eget finibus.
-                </p>
-            </section>
-            <section>
-                <h3>Servicio 2</h3>
-                <div>
-                    <!--Imagen de Icono-->
-                </div>
-                <p>
-                    Pellentesque hendrerit urna eget leo
-                    tempus efficitur. Maecenas fringilla est eget
-                    mi ultricies, quis laoreet leo eleifend. Cras
-                    accumsan feugiat sapien eget finibus.
-                </p>
-            </section>
-            <section>
-                <h3>Servicio 3</h3>
-                <div>
-                    <!--Imagen de Icono-->
-                </div>
-                <p>
-                    Pellentesque hendrerit urna eget leo
-                    tempus efficitur. Maecenas fringilla est eget
-                    mi ultricies, quis laoreet leo eleifend. Cras
-                    accumsan feugiat sapien eget finibus.
-                </p>
-            </section>
-            <section>
-                <h3>Servicio 3</h3>
-                <div>
-                    <!--Imagen de Icono-->
-                </div>
-                <p>
-                    Pellentesque hendrerit urna eget leo
-                    tempus efficitur. Maecenas fringilla est eget
-                    mi ultricies, quis laoreet leo eleifend. Cras
-                    accumsan feugiat sapien eget finibus.
-                </p>
-            </section>
-            <section>
-                <h3>Servicio 3</h3>
-                <div>
-                    <!--Imagen de Icono-->
-                </div>
-                <p>
-                    Pellentesque hendrerit urna eget leo
-                    tempus efficitur. Maecenas fringilla est eget
-                    mi ultricies, quis laoreet leo eleifend. Cras
-                    accumsan feugiat sapien eget finibus.
-                </p>
-            </section>
-            <section>
-                <h3>Servicio 3</h3>
-                <div>
-                    <!--Imagen de Icono-->
-                </div>
-                <p>
-                    Pellentesque hendrerit urna eget leo
-                    tempus efficitur. Maecenas fringilla est eget
-                    mi ultricies, quis laoreet leo eleifend. Cras
-                    accumsan feugiat sapien eget finibus.
-                </p>
-            </section>
-            <section>
-                <h3>Servicio 3</h3>
-                <div>
-                    <!--Imagen de Icono-->
-                </div>
-                <p>
-                    Pellentesque hendrerit urna eget leo
-                    tempus efficitur. Maecenas fringilla est eget
-                    mi ultricies, quis laoreet leo eleifend. Cras
-                    accumsan feugiat sapien eget finibus.
-                </p>
-            </section>
+            </div>
+        </nav>
+
+        <div class="header__texto">
+            <h2>Bienvenido a Alex Construction</h2>
+            <p>Lorem ipsum dolor sit amet</p>
         </div>
-    </main> 
-    <footer class="footer contenedor__centrado">
-        <a href="https://es-es.facebook.com/">
-            <img class="redes-logo" src="assets/img/facebook.png" alt="logo-facebook"></a>
-        <a href="https://www.instagram.com/">
-            <img class="redes-logo" src="assets/img/instagram.png" alt="logo-instagram"></a>
-        <a href="https://es.linkedin.com/">
-            <img class="redes-logo" src="assets/img/linkedin.png" alt="logo-linkedin"></a>
-        <a href="https://wa.me/34634420269">
-            <img class="redes-logo" src="assets/img/whatsapp.png" alt="logo-whatsapp"></a>
-        <p>Derechos reservados al diseñador y desarrollador.</p>
+    </header>
+    <main class="contenedor__centrado contenedor__sombras">
+        <h2 class="servicios__titulo">Mis Servicios</h2>
+        <section>
+            <h3>Servicio 1</h3>
+            <div>
+                <!--Imagen de Icono-->
+            </div>
+            <p>
+                Pellentesque hendrerit urna eget leo
+                tempus efficitur. Maecenas fringilla est eget
+                mi ultricies, quis laoreet leo eleifend. Cras
+                accumsan feugiat sapien eget finibus.
+            </p>
+        </section>
+        <section>
+            <h3>Servicio 2</h3>
+            <div>
+                <!--Imagen de Icono-->
+            </div>
+            <p>
+                Pellentesque hendrerit urna eget leo
+                tempus efficitur. Maecenas fringilla est eget
+                mi ultricies, quis laoreet leo eleifend. Cras
+                accumsan feugiat sapien eget finibus.
+            </p>
+        </section>
+        <section>
+            <h3>Servicio 3</h3>
+            <div>
+                <!--Imagen de Icono-->
+            </div>
+            <p>
+                Pellentesque hendrerit urna eget leo
+                tempus efficitur. Maecenas fringilla est eget
+                mi ultricies, quis laoreet leo eleifend. Cras
+                accumsan feugiat sapien eget finibus.
+            </p>
+        </section>
+        <section>
+            <h3>Servicio 3</h3>
+            <div>
+                <!--Imagen de Icono-->
+            </div>
+            <p>
+                Pellentesque hendrerit urna eget leo
+                tempus efficitur. Maecenas fringilla est eget
+                mi ultricies, quis laoreet leo eleifend. Cras
+                accumsan feugiat sapien eget finibus.
+            </p>
+        </section>
+        <section>
+            <h3>Servicio 3</h3>
+            <div>
+                <!--Imagen de Icono-->
+            </div>
+            <p>
+                Pellentesque hendrerit urna eget leo
+                tempus efficitur. Maecenas fringilla est eget
+                mi ultricies, quis laoreet leo eleifend. Cras
+                accumsan feugiat sapien eget finibus.
+            </p>
+        </section>
+        <section>
+            <h3>Servicio 3</h3>
+            <div>
+                <!--Imagen de Icono-->
+            </div>
+            <p>
+                Pellentesque hendrerit urna eget leo
+                tempus efficitur. Maecenas fringilla est eget
+                mi ultricies, quis laoreet leo eleifend. Cras
+                accumsan feugiat sapien eget finibus.
+            </p>
+        </section>
+        <section>
+            <h3>Servicio 3</h3>
+            <div>
+                <!--Imagen de Icono-->
+            </div>
+            <p>
+                Pellentesque hendrerit urna eget leo
+                tempus efficitur. Maecenas fringilla est eget
+                mi ultricies, quis laoreet leo eleifend. Cras
+                accumsan feugiat sapien eget finibus.
+            </p>
+        </section>
+    </main>
+    <footer class="contenedor__centrado">
+        <div class="footer__contenido">
+            <div class="footer__enlaces">
+                <a href="#">Mapa del sitio</a>
+                <a href="blog.html">Blog</a>
+            </div>
+            <div class="footer__redes">
+                <a href="https://es-es.facebook.com/">
+                    <img class="redes-logo" src="assets/img/facebook.png" alt="logo-facebook"></a>
+                <a href="https://www.instagram.com/">
+                    <img class="redes-logo" src="assets/img/instagram.png" alt="logo-instagram"></a>
+                <a href="https://es.linkedin.com/">
+                    <img class="redes-logo" src="assets/img/linkedin.png" alt="logo-linkedin"></a>
+                <a href="https://wa.me/34634420269">
+                    <img class="redes-logo" src="assets/img/whatsapp.png" alt="logo-whatsapp"></a>
+            </div>
+        </div>
+        <div class="footer__texto">
+            <p>Derechos reservados al diseñador y desarrollador.</p>
+        </div>
     </footer>
 
 </body>
