--- a/proyectos.html
+++ b/proyectos.html
@@ -14,16 +14,21 @@
 
 <body>
     <header class="header__inicio">
-        <div class="contenedor__centrado">
+        <nav class="navegacion">
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
             </a>
-            <nav class="navegacion">
+            <div class="navegacion__enlaces">
                 <a class="navegacion__enlace" href="index.html">Inicio</a>
                 <a class="navegacion__enlace" href="proyectos.html">Proyectos</a>
                 <a class="navegacion__enlace" href="contacto.html">Contacto</a>
                 <a class="navegacion__enlace" href="blog.html">Blog</a>
-            </nav>
+            </div>
+        </nav>
+        
+        <div class="header__texto">
+            <h2>Bienvenido a Alex Constrution</h2>
+            <p>Lorem ipsum dolor sit amet</p>
         </div>
     </header>
     
@@ -64,17 +69,26 @@
             </tbody>
         </table>
     </main>
-    <footer>
-        <h4>Redes Sociales</h4>
-        <a href="https://es-es.facebook.com/">
-            <img class="redes-logo" src="assets/img/facebook.png" alt="logo-facebook"></a>
-        <a href="https://www.instagram.com/">
-            <img class="redes-logo" src="assets/img/instagram.png" alt="logo-instagram"></a>
-        <a href="https://es.linkedin.com/">
-            <img class="redes-logo" src="assets/img/linkedin.png" alt="logo-linkedin"></a>
-        <a href="https://wa.me/34634420269">
-            <img class="redes-logo" src="assets/img/whatsapp.png" alt="logo-whatsapp"></a>
-        <p>Derechos reservados al diseñador y desarrollador.</p>
+    <footer class="contenedor__centrado">
+        <div class="footer__contenido">
+            <div class="footer__enlaces">
+                <a href="#">Mapa del sitio</a>
+                <a href="blog.html">Blog</a>
+            </div>
+            <div class="footer__redes">
+                <a href="https://es-es.facebook.com/">
+                    <img class="redes-logo" src="assets/img/facebook.png" alt="logo-facebook"></a>
+                <a href="https://www.instagram.com/">
+                    <img class="redes-logo" src="assets/img/instagram.png" alt="logo-instagram"></a>
+                <a href="https://es.linkedin.com/">
+                    <img class="redes-logo" src="assets/img/linkedin.png" alt="logo-linkedin"></a>
+                <a href="https://wa.me/34634420269">
+                    <img class="redes-logo" src="assets/img/whatsapp.png" alt="logo-whatsapp"></a>
+            </div>
+        </div>
+        <div class="footer__texto">
+            <p>Derechos reservados al diseñador y desarrollador.</p>
+        </div>
     </footer>
 
 </body>
