--- a/contacto.html
+++ b/contacto.html
@@ -14,57 +14,67 @@
 </head>
 
 <body>
-    <header class="header__inicio">
-        <div class="contenedor__centrado">
+    <header class="header__contacto">
+        <nav class="navegacion">
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
             </a>
-            <nav class="navegacion">
+            <div class="navegacion__enlaces">
                 <a class="navegacion__enlace" href="index.html">Inicio</a>
                 <a class="navegacion__enlace" href="proyectos.html">Proyectos</a>
                 <a class="navegacion__enlace" href="contacto.html">Contacto</a>
                 <a class="navegacion__enlace" href="blog.html">Blog</a>
-            </nav>
-        </div>
-        <div class="header__texto">
-            <h2>Bienvenido a Alex Constrution</h2>
-            <p>Lorem ipsum dolor sit amet</p>
-        </div>
+            </div>
+        </nav>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3131.981250276239!2d-0.7183108846852948!3d38.279927479670626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd63b7ad6e40fdc1%3A0x609104ad972f51c4!2sIES%20Severo%20Ochoa%20Elche!5e0!3m2!1ses!2ses!4v1636029104891!5m2!1ses!2ses"
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </header>
-        <form class="formulario">
-            <div class="campo">
-                <input type="text" placeholder="Nombre" autofocus required pattern="[A-Za-z0-9]{3,30}">
+
+    <form class="formulario">
+        <div class="campo">
+            <input type="text" placeholder="Nombre" autofocus required pattern="[A-Za-z0-9]{3,30}">
+        </div>
+        <div class="campo">
+            <input type="email" placeholder="Email" required>
+        </div>
+        <div class="campo">
+            <input type="number" min="18" max="99" placeholder="Edad" required>
+        </div>
+        <div class="campo">
+            <input type="tel" placeholder="Teléfono" required>
+        </div>
+        <div class="campo">
+            <textarea name="mensaje" required placeholder="Escribe un mensaje" cols="30" rows="10"></textarea>
+        </div>
+        <div class="campo">
+            <input id="checkbox" type="checkbox" required>
+            <label for="checkbox">Acepto la política de privacookies.</label>
+        </div>
+        <div class="campo">
+            <input type="submit" value="Enviar">
+        </div>
+    </form>
+    <footer class="contenedor__centrado">
+        <div class="footer__contenido">
+            <div class="footer__enlaces">
+                <a href="#">Mapa del sitio</a>
+                <a href="blog.html">Blog</a>
             </div>
-            <div class="campo">
-                <input type="email" placeholder="Email" required>
+            <div class="footer__redes">
+                <a href="https://es-es.facebook.com/">
+                    <img class="redes-logo" src="assets/img/facebook.png" alt="logo-facebook"></a>
+                <a href="https://www.instagram.com/">
+                    <img class="redes-logo" src="assets/img/instagram.png" alt="logo-instagram"></a>
+                <a href="https://es.linkedin.com/">
+                    <img class="redes-logo" src="assets/img/linkedin.png" alt="logo-linkedin"></a>
+                <a href="https://wa.me/34634420269">
+                    <img class="redes-logo" src="assets/img/whatsapp.png" alt="logo-whatsapp"></a>
             </div>
-            <div class="campo">
-                <input type="number" min="18" max="99" placeholder="Edad" required>
-            </div>
-            <div class="campo"> 
-                <input type="tel" placeholder="Teléfono" required>
-            </div>
-            <div class="campo">
-                <textarea name="mensaje" required placeholder="Escribe un mensaje" cols="30" rows="10"></textarea>
-            </div>
-            <div class="campo">
-                <input id="checkbox" type="checkbox" required>
-                <label for="checkbox">Acepto la política de privacookies.</label>
-            </div>
-            <div class="campo">
-                <input type="submit" value="Enviar">
-            </div>
-        </form>
-        <footer class="contenedor__centrado">
-            <a href="https://es-es.facebook.com/">
-            <img class="redes-logo" src="assets/img/facebook.png" alt="logo-facebook"></a>
-        <a href="https://www.instagram.com/">
-            <img class="redes-logo" src="assets/img/instagram.png" alt="logo-instagram"></a>
-        <a href="https://es.linkedin.com/">
-            <img class="redes-logo" src="assets/img/linkedin.png" alt="logo-linkedin"></a>
-        <a href="https://wa.me/34634420269">
-            <img class="redes-logo" src="assets/img/whatsapp.png" alt="logo-whatsapp"></a>
-        <p>Derechos reservados al diseñador y desarrollador.</p>
+        </div>
+        <div class="footer__texto">
+            <p>Derechos reservados al diseñador y desarrollador.</p>
+        </div>
     </footer>
 
 </body>
