adding codepen link

--- a/blog.html
+++ b/blog.html
@@ -36,6 +36,7 @@
             <a href="#tabla">Tabla</a>
             <a href="#mapa">Mapa</a>
             <a href="#youtube">YouTube</a>
+            <a href="#codepen">CodePen</a>
             <a href="#barralateral1">Barra Lateral</a>
         </div>
         <section>
@@ -96,7 +97,7 @@
                     harum ipsa veritatis sint?</p>
             </article>
             <article>
-                <a name="copdepen"></a>
+                <a name="codepen"></a>
                 <h2>CodePen</h2>
                 <p class="codepen" data-height="450" data-default-tab="html,result" data-slug-hash="YzzNGeR" data-preview="true" data-user="JavaScriptJunkie" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
                     <span>See the Pen <a href="https://codepen.io/JavaScriptJunkie/pen/YzzNGeR">
