--- a/blog.html
+++ b/blog.html
@@ -14,15 +14,16 @@
 
 <body>
     <header class="header__blog">
+        <div class="height__fijo"></div>
         <nav class="navegacion navegacion__fija">
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
             </a>
             <div class="navegacion__enlaces">
-                <a class="navegacion__enlace__blog" href="index.html">Inicio</a>
-                <a class="navegacion__enlace__blog" href="proyectos.html">Proyectos</a>
-                <a class="navegacion__enlace__blog" href="contacto.html">Contacto</a>
-                <a class="navegacion__enlace__blog" href="blog.html">Blog</a>
+                <a class="navegacion__enlace__fijo" href="index.html">Inicio</a>
+                <a class="navegacion__enlace__fijo" href="proyectos.html">Proyectos</a>
+                <a class="navegacion__enlace__fijo" href="contacto.html">Contacto</a>
+                <a class="navegacion__enlace__fijo" href="blog.html">Blog</a>
             </div>
         </nav>
         
