--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
         </nav>
 
         <div class="header__texto">
-            <h2>Bienvenido a Alex Construction</h2>
-            <p>Lorem ipsum dolor sit amet</p>
+            <div class="header__texto__titulo">
+                <h2>Bienvenido a Alex Construction</h2>
+            </div>
+            <div class="header__texto__texto">
+                <p>Lorem ipsum dolor sit amet</p>
+            </div>
         </div>
     </header>
     <main class="contenedor__centrado contenedor__sombras">
