--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Blog donde podrás ver todas las novedades de las que disponemos y de muchas más noticias interesantes sobre este sector, para que puedas estar al día sobre todos los cambios en construcción.">
+    <meta name="description"
+        content="Blog donde podrás ver todas las novedades de las que disponemos y de muchas más noticias interesantes sobre este sector, para que puedas estar al día sobre todos los cambios en construcción.">
     <link rel="shortcut icon" type="image/svg" href="assets/img/favicon.svg">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" media="print" href="assets/css/especialStyle.css" />
@@ -15,19 +16,20 @@
 <body>
     <header class="header__blog">
         <div class="height__fijo"></div>
-        <nav class="navegacion navegacion__fija">
+        <div class="height__fijo"></div>
+        <nav class="navegacion">
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
             </a>
             <div class="navegacion__enlaces">
-                <a class="navegacion__enlace__fijo" href="index.html">Inicio</a>
-                <a class="navegacion__enlace__fijo" href="proyectos.html">Proyectos</a>
-                <a class="navegacion__enlace__fijo" href="contacto.html">Contacto</a>
-                <a class="navegacion__enlace__fijo" href="blog.html">Blog</a>
+                <a class="navegacion__enlace" href="index.html">Inicio</a>
+                <a class="navegacion__enlace" href="proyectos.html">Proyectos</a>
+                <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+                <a class="navegacion__enlace" href="blog.html">Blog</a>
             </div>
         </nav>
-        
-        <div class="header__texto">
+
+        <div class="header__texto__blog">
             <h2>Blog</h2>
         </div>
     </header>
@@ -90,7 +92,10 @@
             <article>
                 <a name="youtube"></a>
                 <h2>Video YouTube</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/2TQePBCrq8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="350" src="https://www.youtube.com/embed/2TQePBCrq8A"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nisi sit molestias eligendi? Iste
                     necessitatibus maiores eos nemo dolorem quod, Laboriosam nisi sit molestias eligendi? Iste
                     necessitatibus maiores eos nemo dolorem quodLaboriosam nisi sit molestias eligendi? Iste
@@ -100,12 +105,15 @@
             <article>
                 <a name="codepen"></a>
                 <h2>CodePen</h2>
-                <p class="codepen" data-height="450" data-default-tab="html,result" data-slug-hash="YzzNGeR" data-preview="true" data-user="JavaScriptJunkie" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+                <p class="codepen" data-height="450" data-default-tab="html,result" data-slug-hash="YzzNGeR"
+                    data-preview="true" data-user="JavaScriptJunkie"
+                    style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
                     <span>See the Pen <a href="https://codepen.io/JavaScriptJunkie/pen/YzzNGeR">
-                    Credit Card Form - VueJs</a> by Muhammed Erdem (<a href="https://codepen.io/JavaScriptJunkie">@JavaScriptJunkie</a>)
-                    on <a href="https://codepen.io">CodePen</a>.</span>
-                  </p>
-                  <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+                            Credit Card Form - VueJs</a> by Muhammed Erdem (<a
+                            href="https://codepen.io/JavaScriptJunkie">@JavaScriptJunkie</a>)
+                        on <a href="https://codepen.io">CodePen</a>.</span>
+                </p>
+                <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
             </article>
         </section>
         <aside>
@@ -116,6 +124,9 @@
                 accusamus esse?</p>
         </aside>
         <a class="redirecciones__enlaces" href="#tabla">Primer Articulo</a>
+        <a href="https://wa.me/34634420269">
+            <img class="whatsapp___fixed" src="assets/img/whatsapp_fixed.png" alt="Whatsapp Fixed">
+        </a>
     </main>
     <footer class="contenedor__centrado">
         <div class="footer__contenido">
