--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <header class="header__inicio">
+        <div class="height__fijo"></div>
         <nav class="navegacion">
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
@@ -26,12 +27,9 @@
             </div>
         </nav>
 
-        <div class="header__texto">
+        <div class="header__texto__inicio">
             <div class="header__texto__titulo">
                 <h2>Bienvenido a Alex Construction</h2>
-            </div>
-            <div class="header__texto__texto">
-                <p>Lorem ipsum dolor sit amet</p>
             </div>
         </div>
     </header>
