--- a/contacto.html
+++ b/contacto.html
@@ -15,6 +15,7 @@
 
 <body>
     <header class="header__contacto">
+        <div class="height__fijo"></div>
         <nav class="navegacion">
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
@@ -28,34 +29,40 @@
         </nav>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3131.981250276239!2d-0.7183108846852948!3d38.279927479670626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd63b7ad6e40fdc1%3A0x609104ad972f51c4!2sIES%20Severo%20Ochoa%20Elche!5e0!3m2!1ses!2ses!4v1636029104891!5m2!1ses!2ses"
-            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            width="100%" height="450" style="border:0; z-index: 0;" allowfullscreen="" loading="lazy"></iframe>
     </header>
 
-    <form class="formulario">
-        <div class="campo">
-            <input type="text" placeholder="Nombre" autofocus required pattern="[A-Za-z0-9]{3,30}">
-        </div>
-        <div class="campo">
-            <input type="email" placeholder="Email" required>
-        </div>
-        <div class="campo">
-            <input type="number" min="18" max="99" placeholder="Edad" required>
-        </div>
-        <div class="campo">
-            <input type="tel" placeholder="Teléfono" required>
-        </div>
-        <div class="campo">
-            <textarea name="mensaje" required placeholder="Escribe un mensaje" cols="30" rows="10"></textarea>
-        </div>
-        <div class="campo">
-            <input id="checkbox" type="checkbox" required>
-            <label for="checkbox">Acepto la política de privacookies.</label>
-        </div>
-        <div class="campo">
-            <input type="submit" value="Enviar">
-        </div>
-    </form>
-    <footer class="contenedor__centrado">
+    <main class="contacto">
+        <form class="formulario">
+            <fieldset>
+                <legend>Envianos un mensaje</legend>
+                <div>
+                    <div class="campo">
+                        <input type="text" placeholder="Nombre" autofocus required pattern="[A-Za-z0-9]{3,30}">
+                    </div>
+                    <div class="campo">
+                        <input type="email" placeholder="Email" required>
+                    </div>
+                </div>
+                <!-- Quito el campo edad porque no cuadra con mi diseño -->
+                <div class="campo">
+                    <input type="tel" placeholder="Teléfono" required>
+                </div>
+                <div class="campo">
+                    <textarea name="mensaje" required placeholder="Escribe un mensaje" cols="30" rows="10"></textarea>
+                </div>
+                <div class="campo">
+                    <input id="checkbox" type="checkbox" required>
+                    <label for="checkbox">Acepto la política de privacookies.</label>
+                </div>
+                <div class="campo">
+                    <input type="submit" value="Enviar">
+                </div>
+            </fieldset>
+        </form>
+    </main>
+
+    <footer>
         <div class="footer__contenido">
             <div class="footer__enlaces">
                 <a href="#">Mapa del sitio</a>
