--- a/proyectos.html
+++ b/proyectos.html
@@ -14,6 +14,7 @@
 
 <body>
     <header class="header__inicio">
+        <div class="height__fijo"></div>
         <nav class="navegacion">
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
@@ -26,7 +27,7 @@
             </div>
         </nav>
         
-        <div class="header__texto">
+        <div class="header__texto__inicio">
             <h2>Bienvenido a Alex Constrution</h2>
             <p>Lorem ipsum dolor sit amet</p>
         </div>
