botón fijo puesto

--- a/blog.html
+++ b/blog.html
@@ -124,10 +124,10 @@
                 accusamus esse?</p>
         </aside>
         <a class="redirecciones__enlaces" href="#tabla">Primer Articulo</a>
-        <a href="https://wa.me/34634420269">
-            <img class="whatsapp___fixed" src="assets/img/whatsapp_fixed.png" alt="Whatsapp Fixed">
-        </a>
     </main>
+    <a href="https://wa.me/34634420269" target="_blank">
+        <img class="whatsapp___fixed" src="assets/img/whatsapp_fixed.png" alt="Whatsapp Fixed">
+    </a>
     <footer class="contenedor__centrado">
         <div class="footer__contenido">
             <div class="footer__enlaces">
