--- a/blog.html
+++ b/blog.html
@@ -135,13 +135,13 @@
                 <a href="blog.html">Blog</a>
             </div>
             <div class="footer__redes">
-                <a href="https://es-es.facebook.com/">
+                <a href="https://es-es.facebook.com/" target="_blank">
                     <img class="redes-logo" src="assets/img/facebook.png" alt="logo-facebook"></a>
-                <a href="https://www.instagram.com/">
+                <a href="https://www.instagram.com/" target="_blank">
                     <img class="redes-logo" src="assets/img/instagram.png" alt="logo-instagram"></a>
-                <a href="https://es.linkedin.com/">
+                <a href="https://es.linkedin.com/" target="_blank">
                     <img class="redes-logo" src="assets/img/linkedin.png" alt="logo-linkedin"></a>
-                <a href="https://wa.me/34634420269">
+                <a href="https://wa.me/34634420269" target="_blank">
                     <img class="redes-logo" src="assets/img/whatsapp.png" alt="logo-whatsapp"></a>
             </div>
         </div>
