--- a/contacto.html
+++ b/contacto.html
@@ -44,7 +44,7 @@
             <textarea name="mensaje" required placeholder="Escribe un mensaje" cols="30" rows="10"></textarea>
             <div class="bloqueChecbox">
                 <input id="checkbox" type="checkbox" required>
-                <label for="checkbox">Acepto la política de privacookies.</label>
+                <label for="checkbox">Acepto la política de cookies.</label>
             </div>
             <div class="btnEnviar">
                 <input type="submit" value="Enviar">
