--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,8 @@
     <meta name="description"
         content="Blog donde podrás ver todas las novedades de las que disponemos y de muchas más noticias interesantes sobre este sector, para que puedas estar al día sobre todos los cambios en construcción.">
     <link rel="shortcut icon" type="image/svg" href="assets/img/favicon.svg">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" media="print" href="assets/css/especialStyle.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <title>Blog</title>
 </head>
 
@@ -39,7 +39,7 @@
                 <a href="#mapa">Mapa</a>
                 <a href="#youtube">YouTube</a>
                 <a href="#codepen">CodePen</a>
-                <a href="#barralateral1">Barra Lateral</a>
+                <a href="#gradiente">Gradiente</a>
             </div>
         <section>
             <article>
@@ -89,6 +89,11 @@
                     width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </article>
             <article>
+                <a name="gradiente"></a>
+                <h2>Gradiente</h2>
+                <div class="gradiente"></div>
+            </article>
+            <article>
                 <a name="youtube"></a>
                 <h2>Video YouTube</h2>
                 <iframe width="100%" height="350" src="https://www.youtube.com/embed/2TQePBCrq8A"
@@ -115,13 +120,6 @@
                 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
             </article>
         </section>
-        <aside>
-            <a name="barralateral1"></a>
-            <h3>Barra Lateral</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptatum minima dolor molestiae omnis ab
-                officia pariatur aspernatur, vitae dicta unde quos error fugit velit facilis consequuntur necessitatibus
-                accusamus esse?</p>
-        </aside>
         <a class="redirecciones__enlaces" href="#tabla">Primer Articulo</a>
     </main>
     <a href="https://wa.me/34634420269" target="_blank">
