falta font-face y act11t04

--- a/blog.html
+++ b/blog.html
@@ -34,13 +34,13 @@
     </header>
 
     <main class="contenedor__centrado contenedor__sombras">
-            <div class="redirecciones__enlaces">
-                <a href="#tabla">Tabla</a>
-                <a href="#mapa">Mapa</a>
-                <a href="#youtube">YouTube</a>
-                <a href="#codepen">CodePen</a>
-                <a href="#gradiente">Gradiente</a>
-            </div>
+        <div class="redirecciones__enlaces">
+            <a href="#tabla">Tabla</a>
+            <a href="#mapa">Mapa</a>
+            <a href="#youtube">YouTube</a>
+            <a href="#codepen">CodePen</a>
+            <a href="#gradiente">Gradiente</a>
+        </div>
         <section>
             <article>
                 <a name="tabla"></a>
@@ -107,6 +107,11 @@
                     harum ipsa veritatis sint?</p>
             </article>
             <article>
+                <h2>PDF</h2>
+                <a href="https://drive.google.com/file/d/12RT34jFAGUs9ncR1c_QWCWbbMpGfCs53/view?usp=sharing">Guía de
+                    Estilo</a> <span class="pdf"></span>
+            </article>
+            <article>
                 <a name="codepen"></a>
                 <h2>CodePen</h2>
                 <p class="codepen" data-height="450" data-default-tab="html,result" data-slug-hash="YzzNGeR"
@@ -118,6 +123,30 @@
                         on <a href="https://codepen.io">CodePen</a>.</span>
                 </p>
                 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+            </article>
+            <article>
+                <h2>Overflow Scroll</h2>
+                <p class="scroll">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero rerum atque provident exercitationem,
+                    amet facilis error enim pariatur quasi aperiam. Facilis eveniet eos accusantium nulla ratione, est
+                    sed ad libero?
+                    Iste consequuntur, quo labore quos aliquid eum reiciendis nisi ab eaque odio esse autem ex saepe
+                    adipisci atque tempore rem ratione eligendi amet eius deleniti voluptatibus fugit molestiae!
+                    Consequatur, ratione?
+                    Ab quidem veniam aliquid voluptate consequuntur! Esse cumque voluptas fuga nihil dicta molestiae
+                    modi! Dolorum debitis voluptate, illo atque eos sunt ex voluptatibus praesentium? Asperiores quia
+                    tempora quasi aut porro?
+                    Totam, omnis quaerat, ex adipisci maiores officia quod aut nihil, quas quibusdam cum consequatur
+                    qui. Eaque unde nesciunt, corrupti molestiae sed ducimus maiores maxime deserunt quisquam, itaque
+                    magnam recusandae amet!
+                    Ex modi natus placeat velit eaque architecto neque cumque fuga soluta nulla corrupti molestias ut
+                    tempore magnam eligendi voluptatem voluptate, repellat sed ducimus cupiditate! Atque perferendis
+                    quia blanditiis! Ullam, corporis?
+                    Hic, at nobis nesciunt rerum sunt eum beatae, esse blanditiis cum atque alias voluptates, ex quo
+                    possimus laborum minima dolor dolores repellendus modi. Quibusdam, magni. Distinctio cupiditate qui
+                    excepturi alias.
+                    Veniam, laudantium eveniet? Veniam amet dicta eius consectetur eveniet necessitatibus atque saepe
+                    tempora accusamus ipsum molestiae facilis minus expedita quis, animi tempore debitis, eaque non?
+                    Odio provident tenetur aliquid obcaecati?</p>
             </article>
         </section>
         <a class="redirecciones__enlaces" href="#tabla">Primer Articulo</a>
